# jusquci

./: .gitignore  MANIFEST.in  README.md  affixes.c  jusquci--1.0.sql  jusquci.c  jusquci.control  makefile  parser.c  parser.h  pyproject.toml  setup.py  util.h
cli/: main.c  makefile
jusqucy/: __init__.py  jusqucy.c  makefile  normalizer.py  presqucy.c  sentencizer.py  tokenizer.py  ttypes.py
normalizer/: normalizer.c  normalizer.h  normalizer.py
src/: affixes.c  affixes.h  parser.c  parser.h  punct.c  punct.h  typifier.c  typifier.h  util.c  util.h
tests/: sentences.csv  test.sql
